--- a/src/Components/Lists/Lists.module.scss
+++ b/src/Components/Lists/Lists.module.scss
@@ -1,6 +1,8 @@
 .wrap {
-max-width: 30rem;
-	margin: 10rem auto;
+	display: inline-block;
+max-width: 50%;
+	margin: 5rem auto;
+	text-align: center;
 	.up,.down,.add,.remove {
 		margin: .2rem;
 	}
