--- a/src/Components/Lists/Lists.module.scss
+++ b/src/Components/Lists/Lists.module.scss
@@ -6,6 +6,17 @@ max-width: 50%;
 	.up,.down,.add,.remove {
 		margin: .2rem;
 	}
+.sublist {
+	position: relative;
+
+	.showDesc {
+		position: absolute;
+		right: 20rem;
+width: 100%;
+
+	}
+}
+
 }
 
 
