--- a/src/Components/Lists/Form/ContactForm.module.scss
+++ b/src/Components/Lists/Form/ContactForm.module.scss
@@ -1,18 +1,22 @@
 .settingsFormWrapper {
 	text-align: center;
-	position: absolute;
-	right: 1.6rem;
+	position: relative;
+	top: 0.5rem;
 	background: white;
 	border: 1px solid black;
-	z-index: 20;
+	border-bottom: none;
+	z-index: 100;
+	max-width: 100%;
 
 	.settingsForm {
 
-		.sendBtns {
+		.sendBtnGroup {
 			text-align: left;
+			margin-top: 0.5rem;
+			margin-bottom: 0.5rem;
 
 			.sendBtn {
-				margin: 0 5px;
+				margin: 0 0.2rem;
 			}
 		}
 	}
@@ -25,7 +29,7 @@
 		border-radius: 100%;
 		outline: none;
 		position: absolute;
-		bottom: 0;
-		right: 0.5rem;
+		bottom: 1px;
+		right: 1px;
 	}
 }
